misc: twick legend padding on mobile to avoid everything aligning

--- a/public/style.css
+++ b/public/style.css
@@ -155,18 +155,17 @@ legend>*:last-child {
     }
 
     legend>*:first-child {
+        padding-top: 1.5ch;
         border-radius: 0.5rem 0.5rem 0 0;
     }
 
     legend>*:last-child {
         border-radius: 0 0 0.5rem 0.5rem;
         border-left: 2px solid var(--color-grey);
-
+        padding-top: 0.5ch;
         border-top: none;
     }
 }
-
-
 
 code {
     font-family: "Monospace Code", monospace, courier;
